# kelp

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: test.yml
docs/: search-index.js
docs/implementors/core/fmt/: trait.Debug.js
docs/kelp/: fn.h2z.html  fn.hira2hkata.html  fn.hira2kata.html  fn.kata2hira.html  fn.z2h.html  hira2hkata.v.html  index.html  sidebar-items.js
docs/kelp/conv_option/: ConvOption.t.html  ConvOptionBuilder.t.html  index.html  sidebar-items.js  struct.ConvOption.html  struct.ConvOptionBuilder.html
docs/kelp/convert/: fn.h2z.html  fn.hira2hkata.html  fn.hira2kata.html  fn.kata2hira.html  fn.z2h.html  h2z.v.html  z2h.v.html
docs/kelp_cli/: index.html
docs/src/kelp/: conv_option.rs.html  conv_table.rs.html  convert.rs.html  lib.rs.html
docs/src/kelp_cli/: kelp.rs.html
src/: conv_option.rs  conv_table.rs  convert.rs  lib.rs
