[package]
name = "kelp"
version = "0.4.0"
edition = "2018"
authors = ["Taro Yamashita <taro.ymst@gmail.com>"]
repository = "https://github.com/panther-king/kelp"
keywords = ["conversion", "cli"]
readme = "README.md"
license-file = "LICENSE"
description = "A convert tool for Japanese."
documentation = "https://panther-king.github.io/kelp/kelp/"

[dependencies]
clap = "3"

[[bin]]
name = "kelp-cli"
path = "src/bin/kelp.rs"
