[package]
name = "kelp"
version = "0.3.0"
edition = "2021"
authors = ["Taro Yamashita <taro.ymst@gmail.com>"]
repository = "https://github.com/panther-king/kelp"
keywords = ["conversion", "cli"]
readme = "README.md"
license-file = "LICENSE"
description = "A convert tool for Japanese."
documentation = "https://panther-king.github.io/kelp/kelp/"

[dependencies]
clap = { version = "^4", features = ["derive"] }

[[bin]]
name = "kelp-cli"
path = "src/bin/kelp.rs"
